corrected clear for linux/mac